--- a/phaser/prueba2/beta/index.html
+++ b/phaser/prueba2/beta/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>ARVGames corporation</title>
-	<script type="text/javascript" src="js/phaser.min.js"></script>
+	<title>ARVGame corporation</title>
 	<script type="text/javascript" src="js/phaser.js"></script>
-	<script type="text/javascript" src="js/boot.js"></script>
+	<script type="text/javascript" src="js/phaser.min.js"></script>
+	<style type="text/css">
+		body{
+			margin: 0;
+		}
+	</style>
 </head>
 <body>
 
-	<script type="text/javascript">
-		var game = new Phaser.Game(800,600, Phaser.Auto, 'game');
 
-		game.state.add('Boot', Boot, true);
-		game.state.start('Boot');
+<script type="text/javascript">
+	var game = new Phaser.Game(800,600,Phaser.Auto,'game');
 
-	</script>
+	game.state.add('state1', demo.state1);
 
+	game.state.start('state1');
+
+</script>
+<script type="text/javascript" src="js/state1.js"></script>
 </body>
 </html>
