--- a/phaser/prueba2/beta/index.html
+++ b/phaser/prueba2/beta/index.html
@@ -4,6 +4,16 @@
 	<title>ARVGame corporation</title>
 	<script type="text/javascript" src="js/phaser.js"></script>
 	<script type="text/javascript" src="js/phaser.min.js"></script>
+	<script type="text/javascript" src="js/state0.js"></script>
+	<script type="text/javascript" src="js/state1.js"></script>
+	<script type="text/javascript" src="js/state2.js"></script>
+	<script type="text/javascript" src="js/state3.js"></script>
+	<script type="text/javascript" src="js/state4.js"></script>
+	<script type="text/javascript" src="js/state5.js"></script>
+	<script type="text/javascript" src="js/state6.js"></script>
+	<script type="text/javascript" src="js/state7.js"></script>
+	<script type="text/javascript" src="js/state8.js"></script>
+	<script type="text/javascript" src="js/state9.js"></script>
 	<style type="text/css">
 		body{
 			margin: 0;
@@ -16,11 +26,21 @@
 <script type="text/javascript">
 	var game = new Phaser.Game(800,600,Phaser.Auto,'game');
 
+	game.state.add('state0', demo.state0);
 	game.state.add('state1', demo.state1);
+	game.state.add('state2', demo.state2);
+	game.state.add('state3', demo.state3);
+	game.state.add('state4', demo.state4);
+	game.state.add('state5', demo.state5);
+	game.state.add('state6', demo.state6);
+	game.state.add('state7', demo.state7);
+	game.state.add('state8', demo.state8);
+	game.state.add('state9', demo.state9);
 
-	game.state.start('state1');
+	game.state.start('state0');
 
 </script>
-<script type="text/javascript" src="js/state1.js"></script>
+
+
 </body>
 </html>
